# beamRICH

./: LICENSE  README.md  beam-RICH-kajikawa.ggb  mirror_trace.ipynb
hitmap/: CMakeLists.txt  hitmap  hitmap.cc  mppc.yaml
hitmap/include/: Ch2Pos.hh  ReadYAML.hh
hitmap/source/: Ch2Pos.cc  ReadYAML.cc  Vector3D.cc
macro/: AeroThick_vs_nump.cc  BpmInfo_ver2.c  TimeRes_trig.c  Vov_vs_nump.cc  ltdc_ttdc4.cc  plot_hist_timewalk.cc  slewingCorrection5.cc  thetaCh_plot.cc  tofRange_vs_nump3.cc
pidanalysis2/: CMakeLists.txt  info.yml  main.cc
pidanalysis2/include/: Ch2Pos.hh  FunctionDef.hh  GeoEff.hh  ReadYAML.hh
pidanalysis2/source/: Ch2Pos.cc  FunctionDef.cc  GeoEff.cc  ReadYAML.cc
ray-trace/: CMakeLists.txt  README.md  YamlCpp  channelmap.cc  distance.cc  info.yml  main.cc  minimize_root.cc  raytrace
ray-trace/include/: Ch2Pos.hh  ExpConfig.hh  ReadYAML.hh  Vector3D.hh
ray-trace/source/: Ch2Pos.cc  ExpConfig.cc  ReadYAML.cc  Vector3D.cc
